added lab 3, and images

--- a/project/notebook/Clustering_and_Building_Models_V1.ipynb
+++ b/project/notebook/Clustering_and_Building_Models_V1.ipynb
@@ -756,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](rmse.PNG \"Logo Title Text 1\")"
+    "![alt text](rmse.PNG \"RMSE\")"
    ]
   },
   {
@@ -771,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](mae.PNG \"Logo Title Text 1\")"
+    "![alt text](mae.PNG \"MAE\")"
    ]
   },
   {
@@ -786,7 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](mape.PNG \"Logo Title Text 1\")"
+    "![alt text](mape.PNG \"MAPE\")"
    ]
   },
   {
